--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">AppDebts</string>
+    <string name="sucess_conection">Conexao criada com sucesso</string>
 </resources>
