--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,8 @@
     <string name="app_name">AppDebts</string>
     <string name="sucess_conection">Conexao criada com sucesso</string>
     <string name="title_activity_main_window">MainWindow</string>
+    <string name="title_activity_insert_debts">InsertDebts</string>
+    <string name="okMenu">Ok</string>
+    <string name="cancelMenu">Cancel</string>
+    <string name="titleInsert">Inserir novo débito</string>
 </resources>
